servicesfiles/externalnameservice.yml
apiVersion: v1
kind: Service
metadata: 
  name: external-service
spec: 
  type: ExternalName
  externalName: tuhanena.in
  ports:
   - port: 80
