servicesfiles/loadbalancerwala.yml
apiVersion: v1
kind: Service
metadata:
  name: myservice
spec: 
 type: LoadBalancer
 ports:
   - port: 80
     targetPort: 80
 selector:
   env: testing
